# zer0DAYSlater

./: .env.example  .gitignore  .pypirc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE_INDEX.md  Makefile  README.md  README.original.bak  RESEARCH.md  SECURITY.md  VERSION  auto_update_module_index.yml  c2_mesh_agent.py  config.json  config.py  dangerfile.js  decoys.json  demo.sh  demo_full.sh  demo_mode.py  dispatcher.py  doctor.sh  entropy_capsule.py  evasion_win.py  finalize_repo.py  gen_descriptions_from_docstrings.py  generate_modules_toc.py  install_omega.sh  lan_discover.py  lateral.py  llm_command_parser.py  llm_operator.py  lune_structure.txt  memory_loader.py  mtls_mesh.py  omega_campaign.sh  ops-intel.yml  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
agent/: advanced_evasion.py  agent_core.py  ghost_daemon.py  kill_switch.py  mtls_plugin_fetcher.py  plugin_fetcher.py  sandbox_check.py  session_exfil_main.py  session_memory.py  session_replay.py
agents/: lune_agent.py  stage_lune_agent.py
configs/: module_descriptions.json
core/: adaptive_channel_manager.py  exfil_dns.py  exfil_https.py  exfil_icmp.py  exfil_mqtt.py  exfil_ws.py  ws_client.py
demo_recordings/: demo.cast
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  conf.py  index.html  index.md  index.rst  keys.md  loot_log.md
lune/: README.md  __main__.py  chain.json  lune-ui.py  lune.py  requirements.txt  setup.sh
lune_devtoolkit_xyz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: autofix_linter.sh  bait_generator.py  behavioral_scanner.py  (+20 more)
(+99 files in other folders)
