[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zer0dayslater"
version = "1.1.0"
description = "Modular adversarial simulation framework for isolated research environments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pycryptodome>=3.20.0",
    "websockets>=12.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "flake8>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
